# PythonDMX

./: LICENSE  README.md  pyproject.toml
src/PythonDMX/: DMX512.py  __init__.py
